package prosjekt;


public interface MatvareListListener {
    public void listChanged2(matvareliste list);
    
}
